--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,30 +1,29 @@
-<!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-    <id>com.seonhyuk.my_templates_jetbrain</id>
+    <id>com.seonhyuk.my_templates</id>
 
-    <!-- Public plugin name should be written in Title Case.
-         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>My_templates_jetbrain</name>
-
-    <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>
-
-    <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
-         Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
-         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
-    <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
-  ]]></description>
-
-    <!-- Product and plugin compatibility requirements.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
+    <name>My Templates</name>
+    <vendor email="seonhyuk16@gmail.com" url="https://github.com/Seonhyuk">Seonhyuk</vendor>
+    <description>
+        <![CDATA[
+            This plugin allows you to create multiple files at once based on a template.
+            <br />
+            <br />
+            While developing the frontend, I found it quite tedious to repeatedly create index, types, style, and component files every time I built a new component. After doing the same task dozens of times, I realized it would be easier to create a plugin to handle it for me.
+            <br />
+            <br />
+            I’m always open to feedback and suggestions!
+        ]]>
+    </description>
     <depends>com.intellij.modules.platform</depends>
 
-    <!-- Extension points defined by the plugin.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
-    <extensions defaultExtensionNs="com.intellij">
+    <extensions defaultExtensionNs="com.intellij" />
 
-    </extensions>
+    <actions>
+        <action id="com.seonhyuk.my_templates.DynamicComponentActionGroup"
+                class="com.seonhyuk.my_templates.DynamicComponentActionGroup"
+                text="Dynamic Component Actions"
+                description="Group of dynamic component actions">
+            <add-to-group group-id="ProjectViewPopupMenu"/>
+        </action>
+    </actions>
 </idea-plugin>
